# pacemaker-mgmt

./: Makefile.am  README.en.md  README.md  configure.in
debian/: pacemaker-mgmt-client.install  pacemaker-mgmt.files
include/mgmt/: libssh2_config.h  mgmt_common.h
mgmt/client/: IS_Scrolled.py.in  Makefile.am  alarm.py.in  basefunc.py.in  device.sh  diskhb.py.in  drbd.py.in  gfs.py.in  gfs_init.sh  haclient.glade  haclient.py.in  importview.py.in  license_register.py.in  mirror.py.in  nethb.py.in  nkha_constants.py.in  perf_chart.py.in  qdisk.py.in  script  script.py.in  serial.py.in  sfex.py.in  ssh.expect  switch.py.in  sync.py.in  sync.sh  upgrade.py.in
mgmt/daemon/: Makefile.am  mgmt_crm.c  mgmt_lib.c  mgmtd.c
po/: zh_CN.po
snmp_subagent/: hbagent.c
